# yggdrasil

./: CMakeLists.txt  README.md
include/yggdrasil/io/: datastream.hpp
include/yggdrasil/util/: make_unique.hpp
src/yggdrasil/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  test_datastream.cpp  test_datastream.hpp  test_datastream_fixture.hpp
